# csound-lsp

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
csound_data/: csound.json
csound_data/csound_reference_manual/: 404.html  csbeats.html  genIndex.html  index.html  miscopcodes.html  mixer.html  opcodesIndex.html  opcodesQuickRef.html  signalflowgraph.html  sitemap.xml
csound_data/csound_reference_manual/control/: clockctl.html  conditional.html  durctl.html  invocat.html  pgmctl.html  realtime.html  reinitn.html  sensing.html  stacks.html  subinstr.html  timeread.html
csound_data/csound_reference_manual/intro/: copyright-notice.html  historic-preface.html  history-of-the-manual.html  whats-new-in-csound-7.html
csound_data/csound_reference_manual/invoke/: cs-options-alphabetically.html  cs-options-by-category.html  cs-options.html  environment-variables.html  guard-point.html  how-csound-works.html  order-of-precedence.html  the-csd-file-format.html  the-csound-command.html
csound_data/csound_reference_manual/math/: amp.html  array.html  artlogic.html  complex.html  linearalgebra.html  mathfunc.html  opeqfunc.html  rndfunc.html  trig.html
csound_data/csound_reference_manual/midi/: convert.html  extender.html  generic.html  input.html  interop.html  onoff.html  output.html  realtime.html  sliderbk.html  top.html
csound_data/csound_reference_manual/misc/: amp.html  examples.html  formants.html  (+3 more)
csound_data/opcodes/: pluck.md
src/: assets.rs  main.rs  parser.rs  resolve_pulgins.rs  resolve_udos.rs  server.rs  utils.rs
(+1431 files in other folders)
