[package]
name = "csound-lsp"
version = "0.2.7"
edition = "2024"

[dependencies]
lsp-server = "0.7.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.25.10"
rust-embed = "8.9.0"

[dependencies.tree-sitter-csound]
git = "https://github.com/PasqualeMainolfi/tree-sitter-csound.git"
