[package]
name = "csound-lsp"
version = "1.3.53"
edition = "2024"

[dependencies]
lsp-server = "0.7.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.25.10"
rust-embed = "8.9.0"
tree-sitter-python = "0.25.0"
tree-sitter-html = "0.23.2"
regex = "1.12.2"
zip = "7.0.0"
reqwest = { version = "0.13.1", features = ["json"] }
ropey = "1.6.1"
once_cell = "1.21.3"
tree-sitter-json = "0.24.8"


[dependencies.tree-sitter-csound]
git = "https://github.com/PasqualeMainolfi/tree-sitter-csound.git"
